syntax = "proto3";

option go_package = "github.com/Nicknamezz00/proto";

package proto;

message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
  string PaymentLink = 5;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc UpdateOrder(Order) returns (Order);
}

message ItemWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemWithQuantity Items = 2;
}

message GetOrderRequest {
  string OrderID = 1;
  string CustomerID = 2;
}

service StockService {
  rpc CheckIfItemIsInStock(CheckIfItemIsInStockRequest) returns (CheckIfItemIsInStockResponse);
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse);
}

message CheckIfItemIsInStockRequest {
  repeated ItemWithQuantity Items = 1;
}

message CheckIfItemIsInStockResponse {
  bool InStock = 1;
  repeated Item Items = 2;
}

message GetItemsRequest {
  repeated string ItemIDs = 1;
}

message GetItemsResponse {
  repeated Item Items = 1;
}
